# SchroedingerEquationSolver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  tracked.txt  vcpkg.json
app/: CMakeLists.txt
app/src/: atom_model.hpp  base_director.hpp  gpu_engine.hpp  gpucheck_main.cpp  hydrogen_director.hpp  imgui_ui.hpp  imgui_ui.ixx  main.cpp  qrhi_engine.hpp  qrhicheck_main.cpp  scenario.hpp  selftest_arcs.hpp  sim_director.hpp  vk_blobs.hpp  vk_compute.hpp  vk_device.hpp  vk_engine.hpp  vk_present.hpp  vk_render.hpp  vkcheck_main.cpp
app/src/qrhi_shaders/: axpy.comp  blit.vert  bridge_load.comp  bridge_store.comp  copy_state.comp  dipole.comp  pack_half.comp  project_deposit.comp  unpack_half.comp
app/src/shaders/: complex.slang  flow_velocity.comp.slang  grid.slang  mcwf_axpy.comp.slang  mean_force.comp.slang  scale_buf.comp.slang
core/: CMakeLists.txt
core/include/core/: .gitkeep  camera.hpp  colormap.hpp  complex.hpp  cross_section.hpp  decay.hpp  drive.hpp  emission.hpp  fft.hpp  field.hpp  grid.hpp  harmonics.hpp  imaginary_time.hpp  magnetic.hpp  marching_cubes.hpp  measurement.hpp  observables.hpp  potential.hpp  projection.hpp  propagator.hpp  radial.hpp  rotation.hpp  sampling.hpp  simulation.hpp  sphere.hpp  vec.hpp  volume.hpp  vram_budget.hpp  wavepacket.hpp
core/src/: bloch.ixx  fft.ixx  ladder.ixx  mcwf1d.ixx  observables.ixx  phasor.ixx  placeholder.cpp  potential.ixx  projection.ixx  propagator.ixx  spectral.ixx  spectrum1d.ixx  spheroidal.ixx  spinexact.ixx  volume.ixx  vram_budget.ixx
docs/: ANGULAR_PROJECTION_SCOPING.md  ARCHITECTURE.md  GPU_PLAN.md  REVIEW_BACKLOG.md  ROADMAP.md  TDD_RULES.md
scenario/: CMakeLists.txt
solver/: CMakeLists.txt
tests/: CMakeLists.txt  anderson1d_test.cpp  billiard2d_test.cpp  bloch_test.cpp  bouncer1d_test.cpp  camera_test.cpp  carpet1d_test.cpp  colormap_test.cpp  complex_test.cpp  corral2d_test.cpp  cross_section_test.cpp  decay_test.cpp  deflation_test.cpp  degenerate_guards_test.cpp  dipole_angular_test.cpp  drive_test.cpp  dynamics3_test.cpp  eigenstate_flush_test.cpp  emission_test.cpp  fft3_test.cpp  (+55 more)
(+45 files in other folders)
